@@ -639,7 +639,7 @@ bool PluginViewWin::start()
 
     m_isStarted = true;
 
-    if (m_url.isValid() && !m_loadManually) {
+    if (!m_url.isEmpty() && !m_loadManually) {
         FrameLoadRequest frameLoadRequest;
         frameLoadRequest.resourceRequest().setHTTPMethod("GET");
         frameLoadRequest.resourceRequest().setURL(m_url);
@@ -798,7 +798,7 @@ NPError PluginViewWin::load(const FrameLoadRequest& frameLoadRequest, bool sendN
 
     KURL url = frameLoadRequest.resourceRequest().url();
     
-    if (!url.isValid())
+    if (url.isEmpty())
         return NPERR_INVALID_URL;
 
     String target = frameLoadRequest.frameName();
